--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
  - docker
 
 script:
- - wget -O- http://travis.debian.net/script.sh | sh -
+ - wget -O- https://raw.githubusercontent.com/sedden/travis.debian.net/security-updates/script.sh | sh -
 
 branches:
   except:
