--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+env: TRAVIS_DEBIAN_TARGET_DIR=../result
+
 sudo: required
 
 services:
@@ -18,6 +20,7 @@ deploy:
   bucket: s3.jenkner.org
   region: eu-west-1
   upload-dir: debian
+  local_dir: ../result
   on:
     repo: sedden/pkg-python-keyring
     branch: debian/jessie
